# paperless-ngx

./: .gitignore  .ruff.toml  Dockerfile  Pipfile
.github/workflows/: ci.yml
advanced_usage/: index.html
changelog/: index.html
search/: search_index.json
src/: pyproject.toml
src-ui/src/app/components/common/edit-dialog/mail-rule-edit-dialog/: mail-rule-edit-dialog.component.html  mail-rule-edit-dialog.component.spec.ts  mail-rule-edit-dialog.component.ts
src-ui/src/app/components/manage/settings/: settings.component.ts
src-ui/src/app/data/: paperless-mail-rule.ts
src/documents/: consumer.py  converters.py  data_models.py  loggers.py  parsers.py  sanity_checker.py  serialisers.py  tasks.py  utils.py  views.py
src/documents/management/commands/: document_consumer.py  document_fuzzy_match.py  document_thumbnails.py
src/documents/tests/: test_consumer.py  test_task_signals.py  utils.py
src/paperless/: settings.py  urls.py
src/paperless_mail/: mail.py  models.py  serialisers.py
src/paperless_mail/migrations/: 0022_remove_mailrule_assign_correspondent_and_more.py
src/paperless_mail/tests/: test_mail.py
src/paperless_tesseract/: parsers.py
troubleshooting/: index.html
